--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
         iframe {
             width: 100%;
-            height: 100dvh; /* Adjust height as needed to fit the entire form without scrolling inside the iframe */
+            height: 100vh; /* Adjust height as needed to fit the entire form without scrolling inside the iframe */
             border: none;
             display: block;
         }
