--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Embedded Student Marks Form</title>
+        <title>SQSC Half Yearly Exam Marks</title>
         <style>
         iframe {
             width: 100%;
